--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* I normally use rem instead of px and I don't use vendor prefixes anymore, my sass compiler converted for me, auto-magically.
-   This test is about JavaScript not CSS, so I kept basic, but responsive. booya.*/
 * {
     box-sizing: border-box;
 }
@@ -77,7 +75,8 @@ body {
     transition: .4s ease-in-out;
     background: white;
 }
-.card .inside.picked, .card .inside.matched {
+.card .inside.picked,
+.card .inside.matched {
     -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
